# mod-player

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  makefile  wordreader.hpp
include/: song.hpp  wordreader.hpp
include/mod/: song.hpp
include/sound/: mixer.hpp
mod/: effect.hpp  effects.hpp  note.hpp  notemixer.cpp  notemixer.hpp  sample.cpp  sample.hpp  song.cpp  song.hpp
resources/: 1.txt  2.txt  3.txt
sound/: mixer.cpp  mixer.hpp  sound.cpp  sound.hpp
soundplayer/: soundplayer.cpp  soundplayer.hpp
src/: mixer.cpp  song.cpp
tests/: mixer_test.cpp  note_test.cpp  tags
utils/: wordreader.hpp
